# shiori

./: .gitignore  Cargo.toml  README.md  compose.yml  package.json
.github/: changed-files.yml
.github/workflows/: ci.yml  pr.yml
backend/: manage.py  pyproject.toml
backend/libri/: asgi.py  settings.py  urls.py  wsgi.py
backend/metadata/: models.py  serializers.py  urls.py  views.py
backend/metadata/migrations/: 0001_initial.py
backend/metadata/providers/: base.py  goodreads.py
backend/shiori/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/: main.rs
backend/src/routes/: mod.rs
backend/src/routes/api/: mod.rs
backend/src/routes/api/v1/: mod.rs
bk/: pyproject.toml
bk/books/: models.py  serializers.py  urls.py  views.py
bk/books/migrations/: 0001_initial.py
bk/metadata/: models.py  serializers.py  views.py
bk/metadata/migrations/: 0001_initial.py
bk/metadata/providers/: __init__.py  base.py  goodreads.py
bk/shiori/: settings.py  urls.py
core/src/: app.rs  db.rs  lib.rs
crates/shiori_api_types/: Cargo.toml
crates/shiori_api_types/src/: lib.rs
crates/shiori_core/src/: app.rs  db.rs  lib.rs
crates/shiori_database/: Cargo.toml
crates/shiori_database/src/: lib.rs  schema.patch  schema.rs  token.rs
crates/shiori_database/src/models/: api_token.rs  library.rs  media.rs  media_metadata.rs  mod.rs  reading_progress.rs  reading_session.rs  refresh_token.rs  user.rs
crates/shiori_filesystem/: Cargo.toml
crates/shiori_filesystem/src/: common.rs  hash.rs  lib.rs
crates/shiori_filesystem/src/image/cover/: mod.rs
crates/shiori_filesystem/src/media/: epub.rs
crates/shiori_jwt/: Cargo.toml
crates/shiori_jwt/src/: lib.rs
crates/shiori_metadata/: Cargo.toml
crates/shiori_metadata/src/: client.rs  errors.rs  goodreads.rs  lib.rs  provider.rs
crates/shiori_metadata/src/goodreads/: book.rs  mod.rs  parsing.rs  provider.rs  search.rs
crates/shiori_test/: Cargo.toml  README.md
crates/shiori_test/src/: lib.rs  mock_users.rs  response.rs  test_app.rs  test_db.rs  util.rs
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/books/: +page.svelte  +page.ts
frontend/src/routes/books/[id]/: +page.svelte
migrations/2026-03-20-164034-0000_create_media/: up.sql
migrations/2026-03-22-221828-0000_create_libraries/: down.sql  up.sql
migrations/2026-03-22-222309-0000_add_library_id_to_media/: down.sql  up.sql
migrations/2026-03-23-014246-0000_fix_metadata_publish_type/: down.sql  up.sql
migrations/2026-03-23-015237-0000_change_id_to_media_id/: down.sql  up.sql
migrations/2026-03-24-170658-0000_media_library_index/: down.sql  up.sql
migrations/2026-03-25-183332-0000_media_cover/: down.sql  up.sql
migrations/2026-03-28-235610-0000_more_metadata/: down.sql  up.sql
migrations/2026-04-09-165504-0000_users/: up.sql
migrations/2026-04-09-215713-0000_username_index/: down.sql  up.sql
migrations/2026-04-10-031608-0000_refresh_tokens/: down.sql  up.sql
migrations/2026-04-15-163252-0000_user_koreader_pass/: down.sql  up.sql
migrations/2026-04-15-195902-0000_reading_sessions/: down.sql  up.sql
migrations/2026-04-16-151344-0000_add_koreader_hash_to_media/: down.sql  up.sql
migrations/2026-04-16-171542-0000_add_completed_to_sessions/: down.sql  up.sql
migrations/2026-04-16-172059-0000_rename_sessions/: down.sql  up.sql
migrations/2026-04-16-200211-0000_progress_rename_created_at/: down.sql  up.sql
migrations/2026-04-19-162106-0000_published_at_to_published/: down.sql  up.sql
server/src/: schema.rs
server/src/models/: media.rs
src/: auth.rs  errors.rs  lib.rs
src/config/: tracing.rs
src/middleware/: auth.rs
src/routes/: mod.rs  openapi.rs
src/routes/api/: mod.rs
src/routes/api/v1/: auth.rs  filesystem.rs  library.rs  media.rs  metadata.rs  mod.rs  system.rs  tokens.rs
src/routes/koreader/: mod.rs  sync.rs
svelte/: package.json  vite.config.ts
svelte/src/: app.d.ts
svelte/src/routes/: +page.svelte  +page.ts
svelte/src/routes/books.bak/: +page.svelte
svelte/src/routes/books.bak/[id]/: +page.svelte  +page.ts
svelte/src/routes/libraries/[id]/: +page.ts
svelte/src/routes/libraries/new/: schema.ts
tests/: meta.rs  mod.rs  openapi.rs
tests/middleware/: auth.rs
tests/middleware/snapshots/: integration__middleware__auth__authorized_jwt-2.snap
tests/routes/auth/: me.rs
tests/routes/auth/snapshots/: integration__routes__auth__me__me-2.snap
tests/routes/media/: delete.rs  get.rs  get_cover.rs  mod.rs
tests/routes/media/snapshots/: integration__routes__media__get__diff_progress_for_users-2.snap  integration__routes__media__get__diff_progress_for_users-4.snap
tests/routes/tokens/: del.rs  get.rs  post.rs
tests/routes/tokens/snapshots/: integration__routes__tokens__post__post-2.snap  integration__routes__tokens__post__post-4.snap
tests/snapshots/: integration__openapi__open_api_snapshot.snap  meta__meta_initialized-2.snap  meta__meta_uninitialized-2.snap  openapi__open_api_snapshot.snap
web/: .prettierrc  eslint.config.js  package.json  svelte.config.js  vite.config.ts
web/src/lib/: session.svelte.ts  utils.ts
web/src/lib/api/: index.ts
web/src/lib/components/: app-sidebar.svelte  delete-dialog.svelte  dialog.svelte  empty-view.svelte  library-header.svelte  media-card.svelte  metadata-dialog.svelte  read-more.svelte
web/src/lib/components/folder-picker/: folder-picker.svelte
web/src/lib/components/metadata/: metadata-dialog.svelte  search-card.svelte
web/src/lib/components/settings/: sidebar.svelte
web/src/lib/components/sidebar/: logout.svelte  sidebar.svelte
web/src/lib/components/tokens/: columns.ts  create-dialog.svelte  data-table-actions.svelte  data-table.svelte  date-picker.svelte
web/src/lib/components/upload/: dropzone.svelte  files-list.svelte  upload-dialog.svelte
web/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  layout.css
web/src/routes/(app)/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/auth/: +page.svelte  +page.ts  schema.ts
(+96 files in other folders)
