[workspace]
resolver = "3"
members = ["core","server"]

[workspace.dependencies]
axum_typed_multipart = "0.16.5"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.44", default-features = false }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.3.7", features = ["chrono", "postgres"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
serde_json = "1.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
