[package]
name = "shiori"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[dependencies]
axum_typed_multipart = "0.16.5"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.3.7", features = ["chrono", "postgres"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"
utoipa-redoc = { version = "6", features = ["axum"] }

shiori_api_types = { path = "crates/shiori_api_types" }
shiori_core = { path = "crates/shiori_core" }
shiori_database = { path = "crates/shiori_database" }
shiori_filesystem = { path = "crates/shiori_filesystem" }
shiori_metadata = { path = "crates/shiori_metadata" }
