[package]
name = "shiori_database"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
diesel = { version = "2.3.7", features = ["chrono", "postgres"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool"] }
rand = "0.10.1"
sha2 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
utoipa = { version = "5", features = ["chrono"] }
