[package]
name = "shiori_jwt"
edition = "2024"

[dependencies]
axum-extra = { version = "0.12.5", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
once_cell = "1.21.4"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5", features = ["chrono"] }
uuid = { version = "1.23.0", features = ["v4"] }
time = "0.3.47"
