[package]
name = "shiori_metadata"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", default-features = false }
reqwest = "0.13.2"
serde_json = "1.0"
scraper = "0.26.0"
thiserror = "2.0.18"

shiori_database = { path = "../shiori_database" }
shiori_api_types = { path = "../shiori_api_types/" }
